--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,8 +17,10 @@
         </div>
     </div>
 </nav>
-<div class="container-fluid">
-    <div class="card-group" id="cardContainer">
+<div class="container">
+    <div class="card-group">
+        <div class="row" id="cardContainer">
+        </div>
     </div>
 </div>
 
