--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,7 +26,7 @@
 
 
 <div class="modal fade" id="quotesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="quotesModalCenterTitle">Modal title</h5>
@@ -34,8 +34,9 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body" id="quotesModalBody">
-                ...
+            <div class="modal-body">
+                <div clas="container" id="modalQuoteContainer">
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
